fix sort order preview not showing sometimes

--- a/src/app/components/admin-forms-question-maker-child-questions-list/admin-forms-question-maker-child-questions-list.component.scss
+++ b/src/app/components/admin-forms-question-maker-child-questions-list/admin-forms-question-maker-child-questions-list.component.scss
@@ -4,7 +4,6 @@
   ::ng-deep {
     .children-questions {
       padding-left: 10%;
-      margin-bottom: 2.5em;
       
       &-item {
         border: 1px solid $light-grey;
