--- a/src/app/pages/admin-forms/admin-forms.component.scss
+++ b/src/app/pages/admin-forms/admin-forms.component.scss
@@ -38,23 +38,28 @@
         flex-grow: 1;
       }
 
-      .p-dialog {
-        width: 100%;
-        height: 100%;
-        max-height: 100%;
-        margin: 0;
-        overflow: visible;
-
-        &-header {
-          justify-content: space-between;
-          padding: 1em;
-          border-bottom: 1px solid $light-grey;
-        }
-
-        &-content {
-          padding-top: 0.5em;
-          position: relative;
-          flex-grow: 1;
+      .p-dialog-mask {
+        z-index: 100;
+        
+        .p-dialog {
+          width: 100%;
+          height: 100%;
+          max-height: 100%;
+          margin: 0;
+          overflow: visible;
+          z-index: 101;
+  
+          &-header {
+            justify-content: space-between;
+            padding: 1em;
+            border-bottom: 1px solid $light-grey;
+          }
+  
+          &-content {
+            padding-top: 0.5em;
+            position: relative;
+            flex-grow: 1;
+          }
         }
       }
     }
